Changed image file names

--- a/Real_Estate_Analysis.ipynb
+++ b/Real_Estate_Analysis.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![King-County-Picture](images/KingCountyHousingPicture2.jpg)\n",
+    "![King-County-Picture](images/header_picture2.jpg)\n",
     "\n",
     "## Data Understanding\n",
     "\n",
